--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
 		"typecheck": "tsc",
 		"typegen": "wrangler types",
 		"preview": "npm run build && wrangler dev",
-		"cf-typegen": "wrangler types"
+		"cf-typegen": "wrangler types",
+		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+		"format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+		"scrape": "node --experimental-strip-types scrapers/search.ts"
 	},
 	"dependencies": {
 		"@remix-run/cloudflare": "^2.15.3",
@@ -20,7 +23,8 @@
 		"@remix-run/server-runtime": "^2.15.3",
 		"isbot": "^4.1.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250321.0",
@@ -37,11 +41,13 @@
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"postcss": "^8.4.38",
+		"prettier": "^3.5.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"tailwindcss": "^3.4.4",
 		"typescript": "^5.1.6",
 		"vite": "^6.0.0",
 		"vite-tsconfig-paths": "^4.2.1",
-		"wrangler": "^4.5.0"
+		"wrangler": "^3.114.3"
 	},
 	"engines": {
 		"node": ">=20.0.0"
