--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,24 +14,25 @@
     "types": [
         "@remix-run/cloudflare",
         "vite/client",
+        "node",
         "@cloudflare/workers-types/2023-07-01"
     ],
-    "isolatedModules": true,
-    "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "moduleResolution": "Bundler",
-    "resolveJsonModule": true,
     "target": "ES2022",
+    "module": "ES2022",
+    "moduleResolution": "node",
+    "allowImportingTsExtensions": true,
+    "esModuleInterop": true,
     "strict": true,
-    "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "incremental": true,
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"]
     },
-
-    // Remix takes care of building everything in `remix build`.
     "noEmit": true
-  }
+  },
+  "exclude": ["node_modules"]
 }
