--- a/package.json
+++ b/package.json
@@ -1,63 +1,62 @@
 {
-	"name": "woolies-is-greener",
-	"private": true,
-	"sideEffects": false,
-	"type": "module",
-	"scripts": {
-		"build": "remix vite:build",
-		"deploy": "npm run build && wrangler deploy",
-		"dev": "remix vite:dev",
-		"lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-		"start": "wrangler dev",
-		"typecheck": "tsc",
-		"typegen": "wrangler types",
-		"preview": "npm run build && wrangler dev",
-		"cf-typegen": "wrangler types",
-		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-		"format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-		"migrations:apply:local": "wrangler d1 migrations apply DB --local",
-		"migrations:apply:remote": "wrangler d1 migrations apply DB --remote",
-		"migrations:create": "wrangler d1 migrations create woolies-db",
-		"codegen": "kysely-codegen"
-	},
-	"dependencies": {
-		"@remix-run/cloudflare": "^2.15.3",
-		"@remix-run/react": "^2.15.3",
-		"@remix-run/server-runtime": "^2.15.3",
-		"better-sqlite3": "^11.9.1",
-		"isbot": "^4.1.0",
-		"kysely": "^0.27.6",
-		"kysely-codegen": "^0.18.3",
-		"kysely-d1": "^0.3.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"ulidx": "^2.4.1",
-		"zod": "^3.24.2"
-	},
-	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20250321.0",
-		"@remix-run/dev": "^2.15.3",
-		"@types/react": "^18.2.20",
-		"@types/react-dom": "^18.2.7",
-		"@typescript-eslint/eslint-plugin": "^6.7.4",
-		"@typescript-eslint/parser": "^6.7.4",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^8.38.0",
-		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-import": "^2.28.1",
-		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"eslint-plugin-react": "^7.33.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"postcss": "^8.4.38",
-		"prettier": "^3.5.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"tailwindcss": "^3.4.4",
-		"typescript": "^5.1.6",
-		"vite": "^6.0.0",
-		"vite-tsconfig-paths": "^4.2.1",
-		"wrangler": "^3.114.3"
-	},
-	"engines": {
-		"node": ">=20.0.0"
-	}
+  "name": "woolies-is-greener",
+  "private": true,
+  "sideEffects": false,
+  "type": "module",
+  "scripts": {
+    "build": "react-router build",
+    "deploy": "npm run build && wrangler deploy",
+    "dev": "react-router dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "wrangler dev",
+    "typecheck": "react-router typegen && tsc",
+    "typegen": "wrangler types",
+    "preview": "npm run build && wrangler dev",
+    "cf-typegen": "wrangler types",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "migrations:apply:local": "wrangler d1 migrations apply DB --local",
+    "migrations:apply:remote": "wrangler d1 migrations apply DB --remote",
+    "migrations:create": "wrangler d1 migrations create woolies-db",
+    "codegen": "kysely-codegen"
+  },
+  "dependencies": {
+    "@react-router/cloudflare": "^7.5.0",
+    "better-sqlite3": "^11.9.1",
+    "isbot": "^4.1.0",
+    "kysely": "^0.27.6",
+    "kysely-codegen": "^0.18.3",
+    "kysely-d1": "^0.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^7.5.0",
+    "ulidx": "^2.4.1",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250321.0",
+    "@react-router/dev": "^7.5.0",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.38.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.38",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.1.6",
+    "vite": "^6.0.0",
+    "vite-tsconfig-paths": "^4.2.1",
+    "wrangler": "^4.7.2"
+  },
+  "engines": {
+    "node": ">=20.0.0"
+  }
 }
