--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "wrangler dev",
     "typecheck": "react-router typegen && tsc",
-    "typegen": "wrangler types",
+    "typegen": "wrangler types && react-router typegen",
     "preview": "npm run build && wrangler dev",
     "cf-typegen": "wrangler types",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
@@ -27,14 +27,13 @@
     "kysely": "^0.27.6",
     "kysely-codegen": "^0.18.3",
     "kysely-d1": "^0.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-router": "^7.5.0",
     "ulidx": "^2.4.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250321.0",
     "@react-router/dev": "^7.5.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
